--- a/roomdatabase/build.gradle
+++ b/roomdatabase/build.gradle
@@ -38,17 +38,17 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     // Room dependencies
-    implementation 'androidx.room:room-runtime:2.2.5'
+    implementation 'androidx.room:room-runtime:2.2.6'
     /* Coroutines dependencies */
     implementation "androidx.room:room-coroutines:2.1.0-alpha04"
     implementation "androidx.room:room-coroutines:2.1.0-alpha04"
     /* Coordinator layout Dependency*/
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
     /* Support Dependency*/
-    implementation 'com.google.android.material:material:1.3.0-alpha04'
+    implementation 'com.google.android.material:material:1.3.0-rc01'
     /* */
    /* def room_version = '2.3.0-alpha02'*/
-    kapt "androidx.room:room-compiler:2.3.0-alpha03"
+    kapt 'androidx.room:room-compiler:2.3.0-beta01'
    /* implementation "androidx.room:room-coroutines:2.2.3"*/
 
 
