--- a/roomdemo/build.gradle
+++ b/roomdemo/build.gradle
@@ -31,7 +31,7 @@ android {
 dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     def lifecycle_version = "2.2.0"
-    def room_version = "2.2.5"
+    def room_version = '2.2.6'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
